# roost

./: .gitignore  .importlinter  .pre-commit-config.yaml  CITATION.cff  COMMERCIAL.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  Makefile  README.md  hydra_meta.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: index.html  search.json
docs/chatgpt/: levers.html  workflow.html
docs/site_libs/bootstrap/: bootstrap-687a437779832f767d43358f53c83686.min.css
examples/: Makefile  README.md  case.toml  multirun.yaml
examples/example01/: Case_jon+jane_historical_complete.xlsx  Case_life_expectancy.toml  Case_sor_01.toml  Case_sor_02.toml  Case_sor_03.toml  Makefile  _variables.yml  case_alex+jamie-p001.toml  case_alex+jamie-p002.toml  case_alex+jamie.toml  case_bill.toml  case_chris+pat.toml  case_drawdowncalc-comparison-1.toml  case_jack+jill.toml  case_joe.toml  case_john+sally.toml  case_jon+jane.toml  case_jordan+taylor.toml  case_kim+sam-bequest.toml  case_kim+sam-spending.toml  case_morgan.toml  case_robin.toml  makefile  multirun.yaml  run.normalized.toml
examples/fromweb/: Case_alex+jamie.toml  HFP_alex+jamie.xlsx
examples/quarto/: _trial_0.qmd  _trial_setup.qmd  metrics.json  summary-full.txt  summary-year5.txt  test.html  test.py  test.qmd  test.quarto_ipynb_1  trial-test.html  trial-test.qmd  trial.html  trial.qmd  trial.toml  trial_meta.yaml  working_with_results.qmd
scripts/: bump_version.py  owl_info.py  sync_owl_examples.py  sync_owl_parameters_md.py  update_owl_pin.py
site-src/: README.md  index.qmd
site-src/chatgpt/: levers-retirement-geometries.md  reporting-retirement-monitoring.md  workflow.md
src/owlroost/: README.md  __init__.py  exceptions.py  version.py
src/owlroost/audit/: __init__.py  catalog.py  display.py  hydra.py  imports.py  ontology.py  owl_docs.py  packages.py  tree.py
src/owlroost/catalog/: README.md  __init__.py  builders.py  loaders.py  ontology.py  provenance.py  rows.py  service.py  specs.py
src/owlroost/cli/: __init__.py  _main.py  cmd_audit.py  cmd_build.py  cmd_cases.py  cmd_inspect.py  cmd_report.py  cmd_reports.py  cmd_rerun.py  cmd_results.py  cmd_run.py  cmd_schema.py  cmd_summarize.py  cmd_vars.py  utils.py
src/owlroost/conf/: config.yaml
src/owlroost/core/: README.md  case_upgrade.py  dataset.py  dataset.py.xxx  hfp.py  hfp.py.xxx  longevity.py  metrics_from_plan.py  owl_runner.py  progress.py  progress_renderers.py  progress_ui.py  run_owl_executor.py  toml_utils.py  utils.py
src/owlroost/display/: README.md  __init__.py  api.py  bootstrap.py  compare.py  dataset.py  derived.py  explain.py  explain.py.xxx  formatting.py  groups.py  loaders.py  materialize.py  overrides.py  overrides.py.xxx  pipeline.py  projection.py  registry.py  reports.py  specs.py  sync.py  table.py  utils.py  utils.py.xxx  views.py
src/owlroost/domain/: README.md  __init__.py  audit.py  audit_registry.py  case.py  formatting.py  lever.py  registry.py  summary.py  views.py
src/owlroost/entrypoints/: run_case.py
src/owlroost/hydra/: generate_trials.py  helpers.py  owl_hydra_run.py  trial_worker.py  worker_pool.py
src/owlroost/metrics/: bootstrap.py  builders.py  materializers.py  (+2 more)
src/owlroost_v1/: README.md
templates/: _quarto.yml  _variables.yml  simple.qmd
templates/experiment/: _experiment_0.qmd
templates/trial/: trial.qmd
tests/: conftest.py  test_existance.py  test_registry_basic.py  utils.py
tests/catalog/: conftest.py  test_analytic_semantics.py  test_display_overlays.py  test_identity_uniqueness.py  test_layer_disjointedness.py  test_namespace_nodes.py  test_ontology_metadata.py  test_projection_integrity.py  test_view_integrity.py
tests/cli/: test_cmd_run.py  test_cmd_run_bootstrap_override.py  test_cmd_run_stochastic_activation.py
tests/core/: test_case_upgrade.py  test_longevity.py
tests/display/: test_balance_sheet_rows.py  test_display_registry.py  test_display_synthesis.py  test_explain.py  test_field_modules.py  test_fields.py  test_groups.py  test_materalize_case.py  test_materializer.py  test_registry.py  test_results_tree.py  test_specs.py  test_sync.py  test_views.py
tests/domain/: test_cases.py  test_integration_metrics.py  test_lever.py  test_levers.py  test_metrics_definitions.py  test_view_definitions.py  test_view_registry.py
tests/end_to_end/: conftest.py  test_infrastructure.py  test_sweep_cli_expansion.py  test_sweep_materialize.py  test_sweeps.py
tests/generator/: test_generate_trials.py
tests/hydra/: test_config_composition.py  test_historical_defaults.py  test_seed_spawning_integration.py  test_trial_worker.py
tests/integration/: test_all_examples_run_without_errors.py  test_architecture_pipeline.py  test_detects_failed_trials.py  test_experiment_augmented_sampling.py  test_experiment_historical_complete.py  test_historical_rate_path.py  test_stochastic_expansion_contract.py
tests/metrics/: conftest.py  test_aggregate_synthesis.py  test_bootstrap.py  test_layering.py  test_output_metrics_plugin.py  test_owl_outputs_plugin.py  test_plugin_registration.py  test_registry.py  test_specs.py
tests/ontology/: test_ontology.py
tests/schema/: conftest.py  test_bootstrap.py  test_bootstrap_full.py  test_conf_owl_alignment.py  test_custom_plugins.py  test_hydra_alignment.py  test_layering.py  test_metrics.py  test_ontology.py  test_owl_plugin.py  test_owl_solver_plugin.py  test_plugin_registration.py  test_registry.py  test_registry_basic.py  test_registry_completeness.py  test_runtime_paths.py  test_sections.py  test_specs.py  test_sweeps.py
tests/tools/: test_generate_hydra_conf.py  test_schema_consistency.py
tests_v1/cli/: test_cmd_run_stochastic_activation.py  test_main.py
tests_v1/core/: test_case_upgrade.py  test_metrics_from_json.py
tests_v1/domain/: test_cases.py  test_integration_metrics.py  test_levers.py-later  test_metric_spec.py  test_metrics_registry.py
tests_v1/integration/: test_all_examples_run_without_errors.py  test_experiment_augmented_sampling.py  test_stochastic_expansion_contract.py
tests_v1/schema/: test_hydra_alignment.py
(+427 files in other folders)
