[project]
name = "roost"
dynamic = ["version"]

description = "Retirement Options and Outcomes Studies Tool"
readme = "README.md"
requires-python = ">=3.12"

license = "GPL-3.0-or-later"

authors = [
{ name = "John Leonard" }
]

maintainers = [
    { name = "John Leonard" }
]

keywords = [
"retirement",
"retirement-planning",
"financial-planning",
"retirement-research",
"stochastic-simulation",
"monte-carlo",
"optimization",
"policy-analysis",
"reproducible-research",
]

classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Science/Research",
"Intended Audience :: Financial and Insurance Industry",
"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.12",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering",
"Topic :: Office/Business :: Financial",
]

dependencies = [
"hydra-core>=1.3.2",
"jupyter>=1.1.1",
"matplotlib>=3.10.8",
"plotly>=6.5.0",

# OWL is under active development; pin to commit for reproducibility
"owlplanner @ git+https://github.com/mdlacasse/Owl.git@d812eb69c960f650a1e0cfcfd06d58a1fa3c7d1b",  # 2026-02-19

#"owlplanner",
#"owlplanner @ git+https://github.com/lowkeylabs/OwlPlanner.git@feature/config-compare",

"python-dotenv>=1.2.1",
"hydra-joblib-launcher>=1.2.0",
"tqdm>=4.67.1",
"tomlkit>=0.14.0",
"rich>=14.3.3",
"mosek>=11.1.9",
"quarto>=0.1.0",

]

[project.urls]
Homepage = "https://github.com/lowkeylabs/roost"
Repository = "https://github.com/lowkeylabs/roost"
Issues = "https://github.com/lowkeylabs/roost/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pre-commit>=3.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0",
    "pyright>=1.1.400",
    "import-linter>=2.3",
    "grimp>=3.11",
]


[project.scripts]
# provide three different names for the CLI entry point
roost    = "owlroost.cli._main:cli"
roost-audit = "owlroost.tools.audit:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# -------------------------------
# Hatch configuration
# -------------------------------

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "src/owlroost/conf/**/*.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/owlroost"]



# -------------------------------
# Ruff configuration
# -------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting (isort replacement)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled pragmatically
    "UP038",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# -------------------------------
# Ruff formatter (optional but enabled)
# -------------------------------

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --ignore=tests_v1"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
console_output_style = "progress"

# -------------------------------
# Flexible load of local owl-planner for concurrent development
# -------------------------------
## Use when needing to point to local code.
#[tool.uv.sources]
#owlplanner = { path = "../owl-planner", editable = true }

# -------------------------------
# Coverage
# -------------------------------

[tool.coverage.run]
source = ["src/owlroost"]

[tool.coverage.report]
skip_empty = true
show_missing = true

omit = [
    "tests/*",
    "tests_v1/*",
]


# -------------------------------
# Pyright
# -------------------------------

[tool.pyright]
include = ["src", "tests"]

pythonVersion = "3.12"
typeCheckingMode = "basic"

reportMissingImports = true
reportMissingTypeStubs = false


# -------------------------------
# ROOST Architecture Audits
# -------------------------------

[tool.roost.audit]

tree = true
imports = true
packages = true

ontology = true
catalog = true
display = true

fail_on_warning = false
